Feat: Desafio Sistema Bancário

--- a/Aulas/TiposDeOperadores/desafio_sistema_bancario.ipynb
+++ b/Aulas/TiposDeOperadores/desafio_sistema_bancario.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,15 +31,9 @@
       "[3] Extrato\n",
       "[9] Finalizar\n",
       "\n",
-      "--- Extrato de Transações ----\n",
+      "---------- Depósito ----------\n",
       "\n",
-      "Seu saldo atual é de: R$ 0.00\n",
-      "\n",
-      "Transações realizadas: \n",
-      "\n",
-      "\n",
-      "\n",
-      "Total de Saques realizados: 0\n",
+      "Saldo atual atualizado! O valor atual é de R$ 1245.00\n",
       "\n",
       "\n",
       "Retornando ao menu anterior...\n",
@@ -54,7 +48,11 @@
       "\n",
       "----------- Saque ------------\n",
       "\n",
-      "Saldo insuficiente!\n",
+      "Saque realizado com sucesso no valor de R$ 11.00\n",
+      "\n",
+      "Saldo atualizado é de R$ 1234.00\n",
+      "\n",
+      "Total de saques realizados: 1\n",
       "\n",
       "\n",
       "Retornando ao menu anterior...\n",
@@ -67,9 +65,17 @@
       "[3] Extrato\n",
       "[9] Finalizar\n",
       "\n",
-      "---------- Depósito ----------\n",
+      "--- Extrato de Transações ----\n",
       "\n",
-      "Insira um valor válido! could not convert string to float: 'oui'\n",
+      "Seu saldo atual é de: R$ 1234.00\n",
+      "\n",
+      "Transações realizadas: \n",
+      "\n",
+      "Depósito: R$ 1245.00\n",
+      "Saque: R$ 11.00\n",
+      "\n",
+      "\n",
+      "Total de Saques realizados: 1\n",
       "\n",
       "\n",
       "Retornando ao menu anterior...\n",
