fix: Novas funções para cadastro de usuário, conta corrente e verificações

--- a/Desafios/SistemaBancario/desafio_sistema_bancario.ipynb
+++ b/Desafios/SistemaBancario/desafio_sistema_bancario.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Desafio Sistema Bancário com Python"
+    "Desafio Sistema Bancário com Python\n"
    ]
   },
   {
@@ -16,82 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------ Caixa Eletrônico ------\n",
-      "\n",
-      "Escolha a operação desejada:\n",
-      "[1] Saque\n",
-      "[2] Depósito\n",
-      "[3] Extrato\n",
-      "[9] Finalizar\n",
-      "\n",
-      "---------- Depósito ----------\n",
-      "\n",
-      "Saldo atual atualizado! O valor atual é de R$ 1245.00\n",
-      "\n",
-      "\n",
-      "Retornando ao menu anterior...\n",
-      "\n",
-      "------ Caixa Eletrônico ------\n",
-      "\n",
-      "Escolha a operação desejada:\n",
-      "[1] Saque\n",
-      "[2] Depósito\n",
-      "[3] Extrato\n",
-      "[9] Finalizar\n",
-      "\n",
-      "----------- Saque ------------\n",
-      "\n",
-      "Saque realizado com sucesso no valor de R$ 11.00\n",
-      "\n",
-      "Saldo atualizado é de R$ 1234.00\n",
-      "\n",
-      "Total de saques realizados: 1\n",
-      "\n",
-      "\n",
-      "Retornando ao menu anterior...\n",
-      "\n",
-      "------ Caixa Eletrônico ------\n",
-      "\n",
-      "Escolha a operação desejada:\n",
-      "[1] Saque\n",
-      "[2] Depósito\n",
-      "[3] Extrato\n",
-      "[9] Finalizar\n",
-      "\n",
-      "--- Extrato de Transações ----\n",
-      "\n",
-      "Seu saldo atual é de: R$ 1234.00\n",
-      "\n",
-      "Transações realizadas: \n",
-      "\n",
-      "Depósito: R$ 1245.00\n",
-      "Saque: R$ 11.00\n",
-      "\n",
-      "\n",
-      "Total de Saques realizados: 1\n",
-      "\n",
-      "\n",
-      "Retornando ao menu anterior...\n",
-      "\n",
-      "------ Caixa Eletrônico ------\n",
-      "\n",
-      "Escolha a operação desejada:\n",
-      "[1] Saque\n",
-      "[2] Depósito\n",
-      "[3] Extrato\n",
-      "[9] Finalizar\n",
-      "\n",
-      "Obrigado por utilizar nossos serviços!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
@@ -100,6 +27,86 @@
     "    \"extrato\": [],\n",
     "    \"totalSaques\": 0,\n",
     "}\n",
+    "\n",
+    "usuarios_cadastrados = []\n",
+    "\n",
+    "contas_correntes = []\n",
+    "\n",
+    "\n",
+    "def insere_usuario():\n",
+    "    texto = \" Cadastro de Usuário \"\n",
+    "    print(texto.center(30, \"-\") + \"\\n\")\n",
+    "    try:\n",
+    "        nome = input(\"Informe seu nome: \")\n",
+    "        data_nascimento = int(input(\"Informe sua data de nascimento: \"))\n",
+    "        cpf = int(input(\"Informe os números do seu CPF: \"))\n",
+    "        if cpf in [usuario[\"cpf\"] for usuario in usuarios_cadastrados]:\n",
+    "            print(\"CPF já cadastrado!\\n\")\n",
+    "            return 0\n",
+    "        endereco = input(\n",
+    "            \"Informe seu endereço no formato 'Logadouro - Bairro - Cidade/Sigla do Estado: \"\n",
+    "        )\n",
+    "        conta_corrente_usuario = insere_conta_corrente()\n",
+    "        if conta_corrente_usuario == 0:\n",
+    "            return 0\n",
+    "        usuarios_cadastrados.append(\n",
+    "            {\n",
+    "                \"nome\": nome,\n",
+    "                \"data_nascimento\": data_nascimento,\n",
+    "                \"cpf\": cpf,\n",
+    "                \"endereco\": endereco,\n",
+    "                \"conta_corrente\": conta_corrente_usuario,\n",
+    "            }\n",
+    "        )\n",
+    "        print(\"Usuário cadastrado com sucesso!\\n\")\n",
+    "        return usuarios_cadastrados\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erro ao cadastrar usuário! {e}\\n\")\n",
+    "        return usuarios_cadastrados\n",
+    "\n",
+    "\n",
+    "def insere_conta_corrente():\n",
+    "    texto = \" Cadastro de Conta Corrente \"\n",
+    "    print(texto.center(30, \"-\") + \"\\n\")\n",
+    "    try:\n",
+    "        numero_conta = int(input(\"Informe o número da conta corrente: \"))\n",
+    "        agencia = \"0001\"\n",
+    "        for conta in contas_correntes:\n",
+    "            if conta[\"numero_conta\"] == numero_conta:\n",
+    "                print(\"Conta corrente já cadastrada!\\n\")\n",
+    "                return 0\n",
+    "        else:\n",
+    "            contas_correntes.append(\n",
+    "                {\n",
+    "                    \"numero_conta\": numero_conta,\n",
+    "                    \"agencia\": agencia,\n",
+    "                }\n",
+    "            )\n",
+    "            print(\"Conta corrente cadastrada com sucesso!\\n\")\n",
+    "            return contas_correntes[-1]\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erro ao cadastrar conta corrente! {e}\\n\")\n",
+    "        return contas_correntes\n",
+    "\n",
+    "\n",
+    "def verificar_usuario():\n",
+    "    texto = \" Login \"\n",
+    "    print(texto.center(30, \"-\") + \"\\n\")\n",
+    "    try:\n",
+    "        if not usuarios_cadastrados:\n",
+    "            print(\"Nenhum usuário cadastrado!\\n\")\n",
+    "            return False\n",
+    "        else:\n",
+    "            cpf = int(input(\"Informe o cpf do usuário: \"))\n",
+    "            for indice, user in enumerate(usuarios_cadastrados):\n",
+    "                if user[\"cpf\"] == cpf:\n",
+    "                    print(f\"Usuário {cpf} logado com sucesso!\\n\")\n",
+    "                    return main(usuarios_cadastrados[indice])\n",
+    "                else:\n",
+    "                    print(\"Usuário não encontrado!\\n\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erro ao logar usuário! {e}\\n\")\n",
+    "        return False\n",
     "\n",
     "\n",
     "def insere_saldo(saldo_inserido, inserir_extrato):\n",
@@ -158,7 +165,7 @@
     "        return saldo_atual, quantidade_saques, inserir_extrato\n",
     "\n",
     "\n",
-    "def checar_extrato(saldo_atual, extrato_atual, total_saques):\n",
+    "def checar_extrato(saldo_atual, *, extrato_atual, total_saques):\n",
     "\n",
     "    texto = \" Extrato de Transações \"\n",
     "    print(texto.center(30, \"-\") + \"\\n\")\n",
@@ -171,33 +178,51 @@
     "    return saldo_atual, extrato_atual, total_saques\n",
     "\n",
     "\n",
+    "def main(usuario_logado):\n",
+    "    while True:\n",
+    "        print(\"Bem-vindo ao Banco Python!\\n\")\n",
+    "        print(f\"Usuário logado: {usuario_logado['nome']}\\n\")\n",
+    "        print(\"Escolha uma opção: \\n\")\n",
+    "        print(\"2 - Inserir saldo\")\n",
+    "        print(\"3 - Realizar saque\")\n",
+    "        print(\"4 - Checar extrato\")\n",
+    "        print(\"5 - Sair\\n\")\n",
+    "        opcao = int(input(\"Informe a opção desejada: \"))\n",
+    "\n",
+    "        if opcao == 2:\n",
+    "            saldo[\"saldo\"], saldo[\"extrato\"] = insere_saldo(\n",
+    "                saldo[\"saldo\"], saldo[\"extrato\"]\n",
+    "            )\n",
+    "        elif opcao == 3:\n",
+    "            saldo[\"saldo\"], saldo[\"totalSaques\"], saldo[\"extrato\"] = realiza_saque(\n",
+    "                saldo[\"saldo\"], saldo[\"totalSaques\"], saldo[\"extrato\"]\n",
+    "            )\n",
+    "        elif opcao == 4:\n",
+    "            saldo[\"saldo\"], saldo[\"extrato\"], saldo[\"totalSaques\"] = checar_extrato(\n",
+    "                saldo[\"saldo\"],\n",
+    "                extrato_atual=saldo[\"extrato\"],\n",
+    "                total_saques=saldo[\"totalSaques\"],\n",
+    "            )\n",
+    "        elif opcao == 5:\n",
+    "            print(\"Voltando ao Menu Principal...\")\n",
+    "            time.sleep(2)\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Opção inválida! Tente novamente.\\n\")\n",
+    "\n",
+    "\n",
     "while True:\n",
-    "    texto = \" Caixa Eletrônico \"\n",
-    "    print(texto.center(30, \"-\") + \"\\n\")\n",
-    "    print(\n",
-    "        \"Escolha a operação desejada:\\n[1] Saque\\n[2] Depósito\\n[3] Extrato\\n[9] Finalizar\\n\"\n",
-    "    )\n",
-    "    operacao_escolhida = input()\n",
-    "    if operacao_escolhida == \"1\":\n",
-    "        saldo[\"saldo\"], saldo[\"totalSaques\"], saldo[\"extrato\"] = realiza_saque(\n",
-    "            saldo[\"saldo\"], saldo[\"totalSaques\"], saldo[\"extrato\"]\n",
-    "        )\n",
-    "    elif operacao_escolhida == \"2\":\n",
-    "        saldo[\"saldo\"], saldo[\"extrato\"] = insere_saldo(\n",
-    "            saldo[\"saldo\"], saldo[\"extrato\"]\n",
-    "        )\n",
-    "    elif operacao_escolhida == \"3\":\n",
-    "        saldo[\"saldo\"], saldo[\"extrato\"], saldo[\"totalSaques\"] = checar_extrato(\n",
-    "            saldo[\"saldo\"], saldo[\"extrato\"], saldo[\"totalSaques\"]\n",
-    "        )\n",
-    "    elif operacao_escolhida == \"9\":\n",
-    "        print(\"Obrigado por utilizar nossos serviços!\")\n",
+    "    opcao = input(\"1 - Cadastrar usuário\\n2 - Login\\n3 - Sair\\n\")\n",
+    "    if opcao == \"1\":\n",
+    "        insere_usuario()\n",
+    "    elif opcao == \"2\":\n",
+    "        verificar_usuario()\n",
+    "    elif opcao == \"3\":\n",
+    "        print(\"Saindo do sistema...\")\n",
+    "        time.sleep(2)\n",
     "        break\n",
     "    else:\n",
-    "        print(\"Insira uma opção válida!\\n\")\n",
-    "\n",
-    "    print(\"\\nRetornando ao menu anterior...\\n\")\n",
-    "    time.sleep(2)"
+    "        print(\"Opção inválida! Tente novamente.\\n\")"
    ]
   }
  ],
